assert(status == 0) failed: error ETIMEDOUT(60), cond_wait

XMLWordPrintable

    • b22
    • x86_64
    • os_x

        # Internal Error (/scratch/mesos/slaves/ec52e70b-7270-4911-a8ea-ec00a8b5dfb8-S31114/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3b1f16e9-579c-497d-92b3-52cdc4d7897b/runs/693d9fc6-9df6-40ef-869b-c07fae8e2f5a/workspace/open/src/hotspot/os/posix/os_posix.# assert(status == 0) failed: error ETIMEDOUT(60), cond_wait
        #
        # JRE version: Java(TM) SE Runtime Environment (14.0) (fastdebug build 14-internal+0-2019-12-05-2253246.vladimir.x.ivanov.jdk)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-internal+0-2019-12-05-2253246.vladimir.x.ivanov.jdk, mixed mode, tiered, compressed oops, g1 gc, bsd-amd64)
        # Core dump will be written. Default location: core.16641
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -Dtest.class.path.prefix=/scratch/mesos/jib-master/install/2019-12-05-2253246.vladimir.x.ivanov.jdk/src.full/closed/test/hotspot/jtreg/vmTestbase/runtime/pcl/std_CLs/SecureClassLoader/forName/redefine/dynamic-init/anonymous-complex:/scratch/mesos/slaves/ec52

        Host: scaab309.us.oracle.com, Macmini7,1 x86_64 2800 MHz, 4 cores, 16G, Darwin 17.5.0
        Time: Fri Dec 6 16:26:24 2019 GMT elapsed time: 25 seconds (0d 0h 0m 25s)

        --------------- T H R E A D ---------------

        Current thread (0x00007ff80552a800): JavaThread "Loading Thread #1" [_thread_blocked, id=39531, stack(0x000070000fd27000,0x000070000fe27000)]

        Stack: [0x000070000fd27000,0x000070000fe27000], sp=0x000070000fe252c0, free space=1016k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.dylib+0xbc2b13] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
        V [libjvm.dylib+0xbc322f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
        V [libjvm.dylib+0x3a5028] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
        V [libjvm.dylib+0x3a5093] report_vm_status_error(char const*, int, char const*, int, char const*)+0x44
        V [libjvm.dylib+0x9b9b90] os::PlatformEvent::park()+0x108
        V [libjvm.dylib+0x98eff3] ObjectMonitor::EnterI(Thread*)+0x513
        V [libjvm.dylib+0x98e5a6] ObjectMonitor::enter(Thread*)+0x63e
        V [libjvm.dylib+0xaf1633] ObjectSynchronizer::enter(Handle, BasicLock*, Thread*)+0x229
        V [libjvm.dylib+0x580d1c] InstanceKlass::link_class_impl(Thread*)+0x328
        V [libjvm.dylib+0x580ae9] InstanceKlass::link_class_impl(Thread*)+0xf5
        V [libjvm.dylib+0x581e12] InstanceKlass::link_class(Thread*)+0x52
        V [libjvm.dylib+0x581035] InstanceKlass::initialize_impl(Thread*)+0x3f
        V [libjvm.dylib+0x580fb7] InstanceKlass::initialize(Thread*)+0x25
        V [libjvm.dylib+0x59b2aa] InterpreterRuntime::_new(JavaThread*, ConstantPool*, int)+0xc6
        ...

              Assignee:
              Gerard Ziemski (Inactive)
              Reporter:
              Vladimir Ivanov
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: