8236177: assert(status == 0) failed: error ETIMEDOUT(60), cond_wait

Extend the assert to cover the new case.

Reviewed-by: dholmes, kbarrett